--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/pure-min.css')
-    link(rel='stylesheet', href='/stylesheets/select2.css')
+    link(rel='stylesheet', href='/stylesheets/select2-min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
 
     script(type='text/javascript', src='/javascript/jquery-min.js')
